samples/_failures_safe/1761148558_6c599c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86300f8c.c: In function ‘main’:
./samples/SAFE/__tmp_86300f8c.c:144:16: error: missing terminating " character
  144 |         printf("No
      |                ^~~
./samples/SAFE/__tmp_86300f8c.c:144:9: error: expected expression at end of input
  144 |         printf("No
      |         ^~~~~~
./samples/SAFE/__tmp_86300f8c.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_86300f8c.c:144:9: error: expected declaration or statement at end of input
